--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
     "mailparser": "^3.7.1",
     "node-imap": "^0.9.6",
-    "node-schedule": "^2.1.1",
-    "nodemailer": "^6.9.15"
+    "node-schedule": "^2.1.1"
   }
 }
